<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
    android:id="@+id/notifications"
    android:checkable="true"
    android:onClick="onShowNotifications"
    android:title="@string/blacklist_show_notifications" />

    <item
        android:id="@+id/block_hidden_numbers"
        android:checkable="true"
        android:onClick="onBlockHiddenNumbers"
        android:title="@string/blacklist_block_hidden_numbers" />



    <group
        android:id="@+id/blocking_mode"
        android:checkableBehavior="single">
        <item
            android:id="@+id/allow_all"
            android:onClick="selectCallBlockingMode"
            android:title="@string/all_calls" />
        <item
            android:id="@+id/allow_only_list"
            android:onClick="selectCallBlockingMode"
            android:title="@string/allow_list" />
        <item
            android:id="@+id/block_list"
            android:onClick="selectCallBlockingMode"
            android:title="@string/block_list" />
        <item
            android:id="@+id/block_all"
            android:onClick="selectCallBlockingMode"
            android:title="@string/block_all" />
    </group>






</menu>
